# arendt-bot-template

./: README.md  pyproject.toml
src/: main.py
